--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "mkps",
 	"displayName": "cBNF",
 	"description": "cBNF language support",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"license": "MIT",
 	"icon": "res/icon.png",
 	"repository": {
@@ -24,8 +24,8 @@
 			"extensions": [".cbnf"],
 			"configuration": "./language-configuration.json",
 			"icon": {
-				"light": "res/cbnf.svg",
-				"dark": "res/cbnf.svg"
+				"light": "res/cbnf-seti.svg",
+				"dark": "res/cbnf-seti.svg"
 			}
 		}],
 		"grammars": [{
